
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ PFNGLVERTEXATTRIBPOINTERARBPROC ;
typedef scalar_t__ PFNGLVERTEXATTRIB4USVARBPROC ;
typedef scalar_t__ PFNGLVERTEXATTRIB4UIVARBPROC ;
typedef scalar_t__ PFNGLVERTEXATTRIB4UBVARBPROC ;
typedef scalar_t__ PFNGLVERTEXATTRIB4SVARBPROC ;
typedef scalar_t__ PFNGLVERTEXATTRIB4SARBPROC ;
typedef scalar_t__ PFNGLVERTEXATTRIB4NUSVARBPROC ;
typedef scalar_t__ PFNGLVERTEXATTRIB4NUIVARBPROC ;
typedef scalar_t__ PFNGLVERTEXATTRIB4NUBVARBPROC ;
typedef scalar_t__ PFNGLVERTEXATTRIB4NUBARBPROC ;
typedef scalar_t__ PFNGLVERTEXATTRIB4NSVARBPROC ;
typedef scalar_t__ PFNGLVERTEXATTRIB4NIVARBPROC ;
typedef scalar_t__ PFNGLVERTEXATTRIB4NBVARBPROC ;
typedef scalar_t__ PFNGLVERTEXATTRIB4IVARBPROC ;
typedef scalar_t__ PFNGLVERTEXATTRIB4FVARBPROC ;
typedef scalar_t__ PFNGLVERTEXATTRIB4FARBPROC ;
typedef scalar_t__ PFNGLVERTEXATTRIB4DVARBPROC ;
typedef scalar_t__ PFNGLVERTEXATTRIB4DARBPROC ;
typedef scalar_t__ PFNGLVERTEXATTRIB4BVARBPROC ;
typedef scalar_t__ PFNGLVERTEXATTRIB3SVARBPROC ;
typedef scalar_t__ PFNGLVERTEXATTRIB3SARBPROC ;
typedef scalar_t__ PFNGLVERTEXATTRIB3FVARBPROC ;
typedef scalar_t__ PFNGLVERTEXATTRIB3FARBPROC ;
typedef scalar_t__ PFNGLVERTEXATTRIB3DVARBPROC ;
typedef scalar_t__ PFNGLVERTEXATTRIB3DARBPROC ;
typedef scalar_t__ PFNGLVERTEXATTRIB2SVARBPROC ;
typedef scalar_t__ PFNGLVERTEXATTRIB2SARBPROC ;
typedef scalar_t__ PFNGLVERTEXATTRIB2FVARBPROC ;
typedef scalar_t__ PFNGLVERTEXATTRIB2FARBPROC ;
typedef scalar_t__ PFNGLVERTEXATTRIB2DVARBPROC ;
typedef scalar_t__ PFNGLVERTEXATTRIB2DARBPROC ;
typedef scalar_t__ PFNGLVERTEXATTRIB1SVARBPROC ;
typedef scalar_t__ PFNGLVERTEXATTRIB1SARBPROC ;
typedef scalar_t__ PFNGLVERTEXATTRIB1FVARBPROC ;
typedef scalar_t__ PFNGLVERTEXATTRIB1FARBPROC ;
typedef scalar_t__ PFNGLVERTEXATTRIB1DVARBPROC ;
typedef scalar_t__ PFNGLVERTEXATTRIB1DARBPROC ;
typedef scalar_t__ PFNGLGETVERTEXATTRIBPOINTERVARBPROC ;
typedef scalar_t__ PFNGLGETVERTEXATTRIBIVARBPROC ;
typedef scalar_t__ PFNGLGETVERTEXATTRIBFVARBPROC ;
typedef scalar_t__ PFNGLGETVERTEXATTRIBDVARBPROC ;
typedef scalar_t__ PFNGLGETATTRIBLOCATIONARBPROC ;
typedef scalar_t__ PFNGLGETACTIVEATTRIBARBPROC ;
typedef scalar_t__ PFNGLENABLEVERTEXATTRIBARRAYARBPROC ;
typedef scalar_t__ PFNGLDISABLEVERTEXATTRIBARRAYARBPROC ;
typedef scalar_t__ PFNGLBINDATTRIBLOCATIONARBPROC ;
typedef scalar_t__ (* GLADloadproc ) (char*) ;


 int GLAD_GL_ARB_vertex_shader ;
 scalar_t__ glad_glBindAttribLocationARB ;
 scalar_t__ glad_glDisableVertexAttribArrayARB ;
 scalar_t__ glad_glEnableVertexAttribArrayARB ;
 scalar_t__ glad_glGetActiveAttribARB ;
 scalar_t__ glad_glGetAttribLocationARB ;
 scalar_t__ glad_glGetVertexAttribPointervARB ;
 scalar_t__ glad_glGetVertexAttribdvARB ;
 scalar_t__ glad_glGetVertexAttribfvARB ;
 scalar_t__ glad_glGetVertexAttribivARB ;
 scalar_t__ glad_glVertexAttrib1dARB ;
 scalar_t__ glad_glVertexAttrib1dvARB ;
 scalar_t__ glad_glVertexAttrib1fARB ;
 scalar_t__ glad_glVertexAttrib1fvARB ;
 scalar_t__ glad_glVertexAttrib1sARB ;
 scalar_t__ glad_glVertexAttrib1svARB ;
 scalar_t__ glad_glVertexAttrib2dARB ;
 scalar_t__ glad_glVertexAttrib2dvARB ;
 scalar_t__ glad_glVertexAttrib2fARB ;
 scalar_t__ glad_glVertexAttrib2fvARB ;
 scalar_t__ glad_glVertexAttrib2sARB ;
 scalar_t__ glad_glVertexAttrib2svARB ;
 scalar_t__ glad_glVertexAttrib3dARB ;
 scalar_t__ glad_glVertexAttrib3dvARB ;
 scalar_t__ glad_glVertexAttrib3fARB ;
 scalar_t__ glad_glVertexAttrib3fvARB ;
 scalar_t__ glad_glVertexAttrib3sARB ;
 scalar_t__ glad_glVertexAttrib3svARB ;
 scalar_t__ glad_glVertexAttrib4NbvARB ;
 scalar_t__ glad_glVertexAttrib4NivARB ;
 scalar_t__ glad_glVertexAttrib4NsvARB ;
 scalar_t__ glad_glVertexAttrib4NubARB ;
 scalar_t__ glad_glVertexAttrib4NubvARB ;
 scalar_t__ glad_glVertexAttrib4NuivARB ;
 scalar_t__ glad_glVertexAttrib4NusvARB ;
 scalar_t__ glad_glVertexAttrib4bvARB ;
 scalar_t__ glad_glVertexAttrib4dARB ;
 scalar_t__ glad_glVertexAttrib4dvARB ;
 scalar_t__ glad_glVertexAttrib4fARB ;
 scalar_t__ glad_glVertexAttrib4fvARB ;
 scalar_t__ glad_glVertexAttrib4ivARB ;
 scalar_t__ glad_glVertexAttrib4sARB ;
 scalar_t__ glad_glVertexAttrib4svARB ;
 scalar_t__ glad_glVertexAttrib4ubvARB ;
 scalar_t__ glad_glVertexAttrib4uivARB ;
 scalar_t__ glad_glVertexAttrib4usvARB ;
 scalar_t__ glad_glVertexAttribPointerARB ;

__attribute__((used)) static void load_GL_ARB_vertex_shader(GLADloadproc load) {
 if(!GLAD_GL_ARB_vertex_shader) return;
 glad_glVertexAttrib1fARB = (PFNGLVERTEXATTRIB1FARBPROC)load("glVertexAttrib1fARB");
 glad_glVertexAttrib1sARB = (PFNGLVERTEXATTRIB1SARBPROC)load("glVertexAttrib1sARB");
 glad_glVertexAttrib1dARB = (PFNGLVERTEXATTRIB1DARBPROC)load("glVertexAttrib1dARB");
 glad_glVertexAttrib2fARB = (PFNGLVERTEXATTRIB2FARBPROC)load("glVertexAttrib2fARB");
 glad_glVertexAttrib2sARB = (PFNGLVERTEXATTRIB2SARBPROC)load("glVertexAttrib2sARB");
 glad_glVertexAttrib2dARB = (PFNGLVERTEXATTRIB2DARBPROC)load("glVertexAttrib2dARB");
 glad_glVertexAttrib3fARB = (PFNGLVERTEXATTRIB3FARBPROC)load("glVertexAttrib3fARB");
 glad_glVertexAttrib3sARB = (PFNGLVERTEXATTRIB3SARBPROC)load("glVertexAttrib3sARB");
 glad_glVertexAttrib3dARB = (PFNGLVERTEXATTRIB3DARBPROC)load("glVertexAttrib3dARB");
 glad_glVertexAttrib4fARB = (PFNGLVERTEXATTRIB4FARBPROC)load("glVertexAttrib4fARB");
 glad_glVertexAttrib4sARB = (PFNGLVERTEXATTRIB4SARBPROC)load("glVertexAttrib4sARB");
 glad_glVertexAttrib4dARB = (PFNGLVERTEXATTRIB4DARBPROC)load("glVertexAttrib4dARB");
 glad_glVertexAttrib4NubARB = (PFNGLVERTEXATTRIB4NUBARBPROC)load("glVertexAttrib4NubARB");
 glad_glVertexAttrib1fvARB = (PFNGLVERTEXATTRIB1FVARBPROC)load("glVertexAttrib1fvARB");
 glad_glVertexAttrib1svARB = (PFNGLVERTEXATTRIB1SVARBPROC)load("glVertexAttrib1svARB");
 glad_glVertexAttrib1dvARB = (PFNGLVERTEXATTRIB1DVARBPROC)load("glVertexAttrib1dvARB");
 glad_glVertexAttrib2fvARB = (PFNGLVERTEXATTRIB2FVARBPROC)load("glVertexAttrib2fvARB");
 glad_glVertexAttrib2svARB = (PFNGLVERTEXATTRIB2SVARBPROC)load("glVertexAttrib2svARB");
 glad_glVertexAttrib2dvARB = (PFNGLVERTEXATTRIB2DVARBPROC)load("glVertexAttrib2dvARB");
 glad_glVertexAttrib3fvARB = (PFNGLVERTEXATTRIB3FVARBPROC)load("glVertexAttrib3fvARB");
 glad_glVertexAttrib3svARB = (PFNGLVERTEXATTRIB3SVARBPROC)load("glVertexAttrib3svARB");
 glad_glVertexAttrib3dvARB = (PFNGLVERTEXATTRIB3DVARBPROC)load("glVertexAttrib3dvARB");
 glad_glVertexAttrib4fvARB = (PFNGLVERTEXATTRIB4FVARBPROC)load("glVertexAttrib4fvARB");
 glad_glVertexAttrib4svARB = (PFNGLVERTEXATTRIB4SVARBPROC)load("glVertexAttrib4svARB");
 glad_glVertexAttrib4dvARB = (PFNGLVERTEXATTRIB4DVARBPROC)load("glVertexAttrib4dvARB");
 glad_glVertexAttrib4ivARB = (PFNGLVERTEXATTRIB4IVARBPROC)load("glVertexAttrib4ivARB");
 glad_glVertexAttrib4bvARB = (PFNGLVERTEXATTRIB4BVARBPROC)load("glVertexAttrib4bvARB");
 glad_glVertexAttrib4ubvARB = (PFNGLVERTEXATTRIB4UBVARBPROC)load("glVertexAttrib4ubvARB");
 glad_glVertexAttrib4usvARB = (PFNGLVERTEXATTRIB4USVARBPROC)load("glVertexAttrib4usvARB");
 glad_glVertexAttrib4uivARB = (PFNGLVERTEXATTRIB4UIVARBPROC)load("glVertexAttrib4uivARB");
 glad_glVertexAttrib4NbvARB = (PFNGLVERTEXATTRIB4NBVARBPROC)load("glVertexAttrib4NbvARB");
 glad_glVertexAttrib4NsvARB = (PFNGLVERTEXATTRIB4NSVARBPROC)load("glVertexAttrib4NsvARB");
 glad_glVertexAttrib4NivARB = (PFNGLVERTEXATTRIB4NIVARBPROC)load("glVertexAttrib4NivARB");
 glad_glVertexAttrib4NubvARB = (PFNGLVERTEXATTRIB4NUBVARBPROC)load("glVertexAttrib4NubvARB");
 glad_glVertexAttrib4NusvARB = (PFNGLVERTEXATTRIB4NUSVARBPROC)load("glVertexAttrib4NusvARB");
 glad_glVertexAttrib4NuivARB = (PFNGLVERTEXATTRIB4NUIVARBPROC)load("glVertexAttrib4NuivARB");
 glad_glVertexAttribPointerARB = (PFNGLVERTEXATTRIBPOINTERARBPROC)load("glVertexAttribPointerARB");
 glad_glEnableVertexAttribArrayARB = (PFNGLENABLEVERTEXATTRIBARRAYARBPROC)load("glEnableVertexAttribArrayARB");
 glad_glDisableVertexAttribArrayARB = (PFNGLDISABLEVERTEXATTRIBARRAYARBPROC)load("glDisableVertexAttribArrayARB");
 glad_glBindAttribLocationARB = (PFNGLBINDATTRIBLOCATIONARBPROC)load("glBindAttribLocationARB");
 glad_glGetActiveAttribARB = (PFNGLGETACTIVEATTRIBARBPROC)load("glGetActiveAttribARB");
 glad_glGetAttribLocationARB = (PFNGLGETATTRIBLOCATIONARBPROC)load("glGetAttribLocationARB");
 glad_glGetVertexAttribdvARB = (PFNGLGETVERTEXATTRIBDVARBPROC)load("glGetVertexAttribdvARB");
 glad_glGetVertexAttribfvARB = (PFNGLGETVERTEXATTRIBFVARBPROC)load("glGetVertexAttribfvARB");
 glad_glGetVertexAttribivARB = (PFNGLGETVERTEXATTRIBIVARBPROC)load("glGetVertexAttribivARB");
 glad_glGetVertexAttribPointervARB = (PFNGLGETVERTEXATTRIBPOINTERVARBPROC)load("glGetVertexAttribPointervARB");
}
